--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Movie Watchlist</string>
+    <string name="app_name">My Movie Watchlist</string>
 
 
     <string name="password">Password:</string>
