added review links

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="pref_highest_rated">Highest Rated</string>
     <string name="trailer">Trailer</string>
     <string name="favorite" translatable="false">Favorite Movies</string>
+    <string name="share">Share</string>
+    <string name="review">Reviews</string>
 
 </resources>
