--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="favorite" translatable="false">Favorite Movies</string>
     <string name="share">Share</string>
     <string name="review">Reviews</string>
+    <string name="pref_sortBy_title">Sort By:</string>
+    <string name="pref_summary">Choose an order to sort.</string>
+    <string name="pref_sortBy_key" translatable="false">sort</string>
 
 </resources>
